--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-
+!**/.idea/
 ### STS ###
 .apt_generated
 .classpath
@@ -18,7 +18,8 @@ target/
 *.iws
 *.iml
 *.ipr
-*workspace.xml
+workspace.xml
+.idea/workspace.xml
 
 ### NetBeans ###
 /nbproject/private/
