--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<version>2.1.6.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.spinel.datacollection.service</groupId>
-	<artifactId>spinel-datacollection-service</artifactId>
+	<groupId>com.sabi.datacollection.service</groupId>
+	<artifactId>sabi-datacollection-service</artifactId>
 	<version>1.0</version>
-	<name>spinel-datacollection-service</name>
+	<name>sabi-datacollection-service</name>
 	<description>service</description>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -130,8 +130,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.spinel.datacollection.core</groupId>
-			<artifactId>spinel-datacollection-core</artifactId>
+			<groupId>com.sabi.datacollection.core</groupId>
+			<artifactId>sabi-datacollection-core</artifactId>
 			<version>1.0</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
@@ -155,7 +155,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
-		<finalName>spinel-datacollection-service</finalName>
+		<finalName>sabi-datacollection-service</finalName>
 	</build>
 
 </project>
