updated authentication service for admin and other users

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,5 @@ spring.jackson.parser.allow-numeric-leading-zeros=true
 apple.default.password=000000
 
 apple.default.phone=01156548654
+
+login.attempts=5
