DC-724 #comment continued paystack integration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,7 @@ apple.default.password=000000
 apple.default.phone=01156548654
 
 login.attempts=5
+
+### Paystack Properties
+paystack.secret.key=sk_test_18d6d9db7e74be983101abeaedd65d5c99f4f873
+paystack.base.url=https://api.paystack.co/
